Fix SQL syntax, Amended TODOs

--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -68,6 +68,7 @@
 		// 	-[Discuss] Functions inside functions created every time a function is called? Place common functions at top level?
 		// 	-[Discuss] Should this just be done with D-Grid to provide uniform table structure
 		// 	-[Discuss] I read somewhere that var newFunc = function() { } is better practice than function() { }, is that true?
+		// 	-Flush budget changes to server (waiting on update of db.js)
 		// 	-Unique ID for budget table (ref: Store rant in code)
 		// 	-Highlighting for errors on incorrect inputs for budgeting etc (Red box around invalid input)
 		// 	-If changes to budget are made, user should not be able to change accounts until discarded (reset) or updated
