--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -321,7 +321,8 @@
 					//create input widget 
 					var td_budget_input = domConstruct.create("input", { 
 			        	value : item.budget,
-			        	id : row_id + "-budget"
+			        	id : row_id + "-budget",
+			        	pattern : '^[0-9]+(\.[0-9]{1,2})?$'
 			        }, dom.byId(row_id + "-budgetRow"));
 			        var input_error = false;
 
