--- a/public/units/debitors/index.html
+++ b/public/units/debitors/index.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="units/debitors/index.css">
+<link rel="stylesheet" href="/units/debitors/index.css">
 <!-- The tab container for loading the contents of ./forms -->
-<div id='bika-units-debitors-tabcontainer' style="width:50px;"></div> 
+<div id='bika-units-debitors-tabcontainer'></div> 
 <!-- central grid controller -->
-<div class="bika-units-debitors-grid"></div>
+<div id="bika-units-debitors-grid"></div>
 <!-- load the javascript for this page -->
 <script src="/units/debitors/index.js"></script>
