--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,22 @@
   <script>dojoConfig = {parseOnLoad: true, debug: true}</script>
   <script type="text/javascript" src="js/dojoos/dojo/dojo.js"></script>
   <script>
-    require(["dijit/layout/BorderContainer", "dijit/Menu", "dijit/MenuItem", "dijit/MenuSeparator", "customizedModule/TabManager", "dijit/tree/ObjectStoreModel", "dijit/Tree", "dojo/store/JsonRest", "dijit/layout/ContentPane", "customizedModule/SelectX", "dojo/domReady!"],
-      function(BorderContainer, Menu, MenuItem, MenuSeparator, TabManager, ObjectStoreModel, Tree, JsonRest, ContentPane, SelectX) {
+    require(["dijit/layout/BorderContainer", "dijit/Menu", "dijit/MenuItem", "dijit/MenuSeparator", "customizedModule/TabManager", "dijit/tree/ObjectStoreModel", "dijit/Tree", "dojo/store/JsonRest", "dijit/layout/ContentPane", "customizedModule/SelectX", "customizedModule/ApplicationState", "dojo/domReady!"],
+      function(BorderContainer, Menu, MenuItem, MenuSeparator, TabManager, ObjectStoreModel, Tree, JsonRest, ContentPane, SelectX, ApplicationState) {
 
-        var enterpriseSelect, enterpriseSelect_query;
+        /////
+        // Applicaton Structure
+        // 
+        // TODO: 
+        // -Reformat (/clean up) module - consistent styling / naming (tabs/ identation) - delcare variables at top of funcitons (not interspersed etc.) - Modularise creation and use of components
+        // -Module tests
+        // -[Research] AMD module to carry application component events and values to modules that require them
+        /////
+        var app_state = new ApplicationState();
+        var enterpriseSelect, enterpriseSelect_query, fiscal_select;
 
         initEnterpriseSelect();
-
+        initFiscalSelect(100);
         var bc = new BorderContainer({}, "bc");
 
         var tabManager = new TabManager({}, "tab_container");
@@ -116,14 +125,37 @@
           enterpriseSelect = new SelectX({
             store: enterpriseSelect_store,
             query: '?' + requetteEntreprise,
-          }, "enterprise-select");            
+          }, "enterprise-select");    
+
+          //Make componenet available to entire application 
+          app_state.setComponent("enterprise-select", enterpriseSelect);        
         }
 
         function initFiscalSelect(enterprise_id) { 
+          //Settup model and view for the fiscal year Selection componenet
+          
           var fiscal_query = {};
-          var e = [{t : 'fiscal_year', c : ['id', 'fiscal_year_text']}];
+          var e = [{t : 'fiscal_year', c : ['id', 'start_month', 'start_year']}];
           fiscal_query.e = e;
+          var formatRequest = JSON.stringify(fiscal_query);
+
+          //Using to make use of getLabel - dojo/request may be a better option
+          var fiscal_store = new JsonRest({
+            target : "/data/",
+            getLabel :  function(data) { 
+              return data.start_month + "/" + data.start_year;
+            }
+          });
+          
+          fiscal_select = new SelectX({ 
+            store : fiscal_store,
+            query : '?' + formatRequest
+          }, "fiscal-select");
+
+          //Make componenet available to entire application 
+          app_state.setComponent("fiscal-select", fiscal_select);
         }
+
       });
   </script>
 </head>
