--- a/public/login.html
+++ b/public/login.html
@@ -56,12 +56,12 @@
     <form action="/login" method="POST">
       <label>Bika</label>
       <div class="row">
-          <label>User</label>
+          <label for="username">User</label>
           <input name="username" type="text" autofocus />
       </div>
       <div class="row">
-        <label>Password</label>
-        <input name="password" type="password" />
+        <label for="password">Password</label>
+        <input name="password" type="password" required />
       </div>
       <div class="control">
         <input type="submit" />
