--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,16 @@
 
         initEnterpriseSelect();
         initFiscalSelect(100);
-        var bc = new BorderContainer({}, "bc");
+        var bc = new BorderContainer({}, "bika-border-container");
 
-        var tabManager = new TabManager({}, "tab_container");
+        var tabManager = new TabManager({}, "bika-tab-container");
         var sidebar = new ContentPane({
           region: 'left',
-        }, "sidebar");
+        }, "bika-sidebar");
 
         var center_panel = new ContentPane({
           region: 'center',
-        }, "center_panel");
+        }, "bika-center-panel");
 
         bc.addChild(center_panel);
         bc.addChild(sidebar);
@@ -85,10 +85,10 @@
               tabManager.addChildren(item.name, item.url, true, true);
             }
           }
-        }, "tree");
+        }, "bika-tree");
 
         var menuContext = new Menu({
-          targetNodeIds: ["tree"],
+          targetNodeIds: ["bika-tree"],
           selector: ".dijitTreeNodeContainer > .dijitTreeNode > .dijitTreeNodeContainer > .dijitTreeNode", // FIXME: find a better selector
           id: "menuContext",
           style: "display: none;"
@@ -125,7 +125,7 @@
           enterpriseSelect = new SelectX({
             store: enterpriseSelect_store,
             query: '?' + requetteEntreprise,
-          }, "enterprise-select");    
+          }, "bika-enterprise-select");    
 
           //Make componenet available to entire application 
           app_state.setComponent("enterprise-select", enterpriseSelect);        
@@ -150,7 +150,7 @@
           fiscal_select = new SelectX({ 
             store : fiscal_store,
             query : '?' + formatRequest
-          }, "fiscal-select");
+          }, "bika-fiscal-select");
 
           //Make componenet available to entire application 
           app_state.setComponent("fiscal-select", fiscal_select);
@@ -160,23 +160,23 @@
   </script>
 </head>
 <body class="claro">
-  <div id="bc">
-    <div id="sidebar">
-      <div class="dock">
+  <div id="bika-border-container">
+    <div id="bika-sidebar">
+      <div class="bika-dock">
         <ul>
           <li><a class="iconic cog" href="/logout"></a></li>
           <li><a class="iconic equalizer" href="#"></a></li>
           <li><a class="iconic home" href="#"></a></li>
         </ul>
       </div>
-      <div id="tree"></div>
-      <div id="application-select">
-        <div id="enterprise-select"></div>
-        <div id="fiscal-select"></div>
+      <div id="bika-tree"></div>
+      <div id="bika-application-select">
+        <div id="bika-enterprise-select"></div>
+        <div id="bika-fiscal-select"></div>
       </div>
     </div>
-    <div id="center_panel">
-      <div id="tab_container"></div>
+    <div id="bika-center-panel">
+      <div id="bika-tab-container"></div>
     </div>
   </div>
 </body>
